--- a/templates/tags.html
+++ b/templates/tags.html
@@ -58,9 +58,9 @@ All tags used in the {{ SITENAME|striptags|e }} blog.
         <h2 id="{{ tag.slug }}-ref" class="tag-title">{{ tag }}</h2>
         <ul class="list-articles-under-tag-category">
             {% for article in articles|sort(reverse = true, attribute = 'date') %}
-            <li itemscope>
-                <a href="{{ SITEURL }}/{{ article.url }}">
-                    {{ article.title }}
+                <li itemscope>
+                <time itemprop="dateCreated" datetime="{{ article.date.isoformat() }}">{{ article.locale_date }}</time>
+                <a href="{{ SITEURL }}/{{ article.url }}" style="padding: 10px">{{ article.title }}
                     {% if article.subtitle %}
                     <small class="subtitle">
                         {{ article.subtitle }}
